--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="assets/style.css" />
 
 <head>
   <meta charset="UTF-8" />
@@ -7,301 +8,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description"
     content="The Satoshi Faucet - a nostalgic tribute faucet giving away a few satoshis to keep the legacy alive." />
-
-  <style>
-    :root {
-      --accent: #c9302c;
-      --accent-dark: #a72824;
-      --border-color: #ddd;
-      --bg-light: #fafafa;
-      --font-main: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: var(--font-main);
-      background: #ffffff;
-      color: #222;
-      line-height: 1.5;
-    }
-
-    .page {
-      max-width: 960px;
-      margin: 0 auto;
-      padding: 24px 16px 40px;
-    }
-
-    header {
-      text-align: center;
-      margin-bottom: 50px;
-      position: relative;
-      /* so we can position the tap inside */
-      padding-left: 120px;
-      /* leave room for tap on the left */
-    }
-
-    .logo-area {
-      display: inline-flex;
-      align-items: center;
-      gap: 12px;
-      margin-bottom: 8px;
-    }
-
-    .faucet-icon {
-      width: 40px;
-      height: 40px;
-      border-radius: 4px;
-      border: 2px solid var(--accent);
-      position: relative;
-    }
-
-    .faucet-icon::before,
-    .faucet-icon::after {
-      content: "";
-      position: absolute;
-      background: var(--accent);
-    }
-
-    .faucet-icon::before {
-      /* horizontal pipe */
-      height: 8px;
-      width: 85%;
-      top: 8px;
-      left: 3px;
-      border-radius: 4px;
-    }
-
-    .faucet-icon::after {
-      /* drop */
-      width: 8px;
-      height: 12px;
-      border-radius: 50%;
-      bottom: 4px;
-      left: 16px;
-    }
-
-    /* Tap image in the top-left */
-    .tap-image {
-      position: absolute;
-      left: 0;
-      top: 0;
-      max-width: 120px;
-      height: auto;
-    }
-
-    h1 {
-      font-size: 2.1rem;
-      margin: 0;
-      font-weight: 600;
-    }
-
-    .subtitle {
-      margin-top: 6px;
-      font-size: 0.95rem;
-      color: #666;
-    }
-
-    .layout {
-      display: flex;
-      align-items: flex-start;
-      gap: 24px;
-      margin-top: 24px;
-    }
-
-    .sidebar {
-      flex: 0 0 170px;
-      font-size: 0.9rem;
-      border-right: 1px solid var(--border-color);
-      padding-right: 16px;
-    }
-
-    .sidebar h2 {
-      font-size: 1rem;
-      margin-top: 0;
-      margin-bottom: 8px;
-    }
-
-    .sidebar-value {
-      font-weight: 600;
-      margin-bottom: 16px;
-    }
-
-    .sidebar ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    .sidebar li+li {
-      margin-top: 4px;
-    }
-
-    .sidebar a {
-      color: #1a0dab;
-      text-decoration: none;
-    }
-
-    .sidebar a:hover {
-      text-decoration: underline;
-    }
-
-    main {
-      flex: 1;
-      min-width: 0;
-    }
-
-    .faucet-panel {
-      border: 1px solid var(--border-color);
-      padding: 16px;
-      background: var(--bg-light);
-      margin-bottom: 24px;
-    }
-
-    .faucet-panel-title {
-      font-weight: 600;
-      margin-bottom: 8px;
-    }
-
-    .faucet-panel-text {
-      font-size: 0.95rem;
-      margin-bottom: 12px;
-    }
-
-    .captcha-wrap {
-      border: 2px solid var(--accent);
-      background: #fff;
-      padding: 12px;
-      margin-bottom: 12px;
-    }
-
-    .captcha-note {
-      font-size: 0.8rem;
-      color: #555;
-      margin-bottom: 8px;
-    }
-
-    .address-row {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      gap: 8px;
-      margin-top: 12px;
-      font-size: 0.9rem;
-    }
-
-    .address-row label {
-      white-space: nowrap;
-    }
-
-    .address-row input[type="text"] {
-      flex: 1;
-      min-width: 180px;
-      padding: 6px 8px;
-      border-radius: 2px;
-      border: 1px solid #ccc;
-      font-size: 0.9rem;
-    }
-
-    .btn-primary {
-      padding: 7px 14px;
-      background: var(--accent);
-      color: #fff;
-      border: 1px solid var(--accent-dark);
-      border-radius: 2px;
-      font-size: 0.9rem;
-      cursor: pointer;
-      white-space: nowrap;
-    }
-
-    .btn-primary:hover {
-      background: var(--accent-dark);
-    }
-
-    .btn-primary:disabled {
-      opacity: 0.55;
-      cursor: default;
-    }
-
-    .status-message {
-      margin-top: 10px;
-      font-size: 0.85rem;
-      color: #444;
-    }
-
-    .status-success {
-      color: #0a7f00;
-    }
-
-    .status-error {
-      color: #b30000;
-    }
-
-    section {
-      margin-bottom: 20px;
-      font-size: 0.95rem;
-    }
-
-    section h2 {
-      font-size: 1.1rem;
-      margin-bottom: 6px;
-    }
-
-    section p {
-      margin: 4px 0;
-    }
-
-    footer {
-      margin-top: 32px;
-      font-size: 0.8rem;
-      color: #777;
-      text-align: center;
-    }
-
-    @media (max-width: 768px) {
-      .layout {
-        flex-direction: column;
-      }
-
-      .sidebar {
-        border-right: none;
-        border-bottom: 1px solid var(--border-color);
-        padding-right: 0;
-        padding-bottom: 12px;
-        margin-bottom: 16px;
-      }
-
-      .faucet-panel {
-        padding: 14px;
-      }
-    }
-
-    /* Make the tap behave nicely on small screens */
-    @media (max-width: 600px) {
-      header {
-        padding-left: 0;
-      }
-
-      .tap-image {
-        position: static;
-        display: block;
-        margin: 0 auto 8px;
-      }
-    }
-
-    @media (prefers-reduced-motion: reduce) {
-      * {
-        scroll-behavior: auto !important;
-        animation-duration: 0.001ms !important;
-        animation-iteration-count: 1 !important;
-        transition-duration: 0.001ms !important;
-      }
-    }
-  </style>
 </head>
 
 <body>
@@ -327,7 +33,8 @@
 
         <h2>Other Sites</h2>
         <ul>
-          <li><a href="https://bitcoin.org" target="_blank" rel="noopener noreferrer">Bitcoin.org</a></li>
+          <li><a href="https://bitcointalk.org" target="_blank" rel="noopener noreferrer">bitcointalk.org</a></li>
+          <li><a href="https://bitcoin.org" target="_blank" rel="noopener noreferrer">bitcoin.org</a></li>
           <li><a href="https://en.bitcoin.it/wiki/Main_Page" target="_blank" rel="noopener noreferrer">Bitcoin Wiki</a>
           </li>
         </ul>
@@ -597,6 +304,30 @@
   </script>
 
 
+  <script>
+    (function () {
+      // on load, try to show current status by IP
+      fetch("status.php")
+        .then(r => r.json())
+        .then(data => {
+          if (!data || !data.status || data.status === 'none') return;
+          const statusEl = document.getElementById("status-message");
+          if (!statusEl) return;
+          if (data.status === 'pending' || data.status === 'processing') {
+            statusEl.textContent = "You already have a request in progress. Please check back later.";
+            statusEl.classList.add("status-success");
+          } else if (data.status === 'paid') {
+            statusEl.textContent = "You already claimed — sats were sent to your invoice.";
+            statusEl.classList.add("status-success");
+          } else if (data.status === 'failed') {
+            statusEl.textContent = "Your previous request failed. You can try again later.";
+            statusEl.classList.add("status-error");
+          }
+        })
+        .catch(() => { /* ignore */ });
+
+    })();
+  </script>
 </body>
 
 </html>
