How to create lighting invoice page added

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
               <input id="address-input" name="address" type="text" placeholder="bc1... or Lightning invoice" />
               <button type="submit" class="btn-primary" id="get-button">Get Some!</button>
             </div>
+            <p style="font-size:0.85rem;margin-top:6px;">
+              Need help? <a href="how-to-create-lightning-invoice.html" target="_blank" rel="noopener">How to create a
+                Lightning invoice</a>
+            </p>
 
             <div class="status-message" id="status-message" aria-live="polite"></div>
           </form>
