Updated how to create lighting invoice page added

--- a/how-to-create-lightning-invoice-steps.html
+++ b/how-to-create-lightning-invoice-steps.html
@@ -46,14 +46,14 @@
             <!-- Main content -->
             <main>
                 <div class="page">
-                    <header>
+                    <div>
                         <a href="index.html" class="back-link">&larr; Back to The Satoshi Faucet</a>
                         <h1>How to Create a Lightning Invoice (100 sats)</h1>
                         <div class="subtitle">
                             Follow these simple steps in your favorite Lightning wallet to generate a BOLT11 invoice you
                             can paste into the faucet.
                         </div>
-                    </header>
+                    </div>
 
                     <div class="wallet-list">
                         <strong>Supported examples on this page:</strong>
