Updated reCaptcha with v3 with v2 Checkbox version

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description"
     content="The Satoshi Faucet - a nostalgic tribute faucet giving away a few satoshis to keep the legacy alive." />
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
 </head>
 
 <body>
@@ -55,8 +57,10 @@
                 We offer free sats only to humans or aliens but not robots.<br>
                 Please prove you're not an AI robot by completing the reCAPTCHA below.
               </div>
-              <div class="g-recaptcha" data-sitekey="6LdX7wksAAAAAMQ86AekQ3IAyvy5YTJ6xgdbTwzv">
-              </div>
+              <div class="g-recaptcha" data-sitekey="6LdX7wksAAAAAMQ86AekQ3IAyvy5YTJ6xgdbTwzv"></div>
+
+
+
             </div>
 
             <div class="address-row">
@@ -65,7 +69,8 @@
               <button type="submit" class="btn-primary" id="get-button">Get Some!</button>
             </div>
             <p style="font-size:0.85rem;margin-top:6px;">
-              Need help? <a href="how-to-create-lightning-invoice-steps.html" target="_blank" rel="noopener">How to create a
+              Need help? <a href="how-to-create-lightning-invoice-steps.html" target="_blank" rel="noopener">How to
+                create a
                 Lightning invoice</a>
             </p>
 
