Added a message for the hackers

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
       <aside class="sidebar">
         <h2>Balance</h2>
         <div class="sidebar-value" id="available-balance">▲ 75&nbsp;000 satoshis available</div>
-
+        <ul>
+          <li><a href="dear-hackers.html" rel="noopener noreferrer">hackers corners</a>
+          </li>
+        </ul>
         <h2>Other Sites</h2>
         <ul>
           <li><a href="https://bitcointalk.org" target="_blank" rel="noopener noreferrer">bitcointalk.org</a></li>
@@ -55,7 +58,7 @@
             <div class="captcha-wrap">
               <div class="captcha-note">
                 We offer free sats only to humans or aliens but not robots.<br>
-                Please prove you're not an AI robot by completing the reCAPTCHA below.yyyyyyyy
+                Please prove you're not an AI robot by completing the reCAPTCHA below.
               </div>
               <!-- Google reCAPTCHA -->
               <div class="g-recaptcha" data-sitekey="6LfFKSEsAAAAAKBqHR-UMEAQppJZ58vzoY4R_qb_"></div>
@@ -63,7 +66,8 @@
 
             <div class="address-row">
               <label for="address-input">Your Satoshi Address:</label>
-              <input id="address-input" name="address" type="text" placeholder="Lightning invoice (starting with lnbc...)" />
+              <input id="address-input" name="address" type="text"
+                placeholder="Lightning invoice (starting with lnbc...)" />
               <button type="submit" class="btn-primary" id="get-button">Get Some!</button>
             </div>
             <p style="font-size:0.85rem;margin-top:6px;">
