Status page added for users

--- a/index.html
+++ b/index.html
@@ -31,11 +31,7 @@
       <!-- Left column / sidebar -->
       <aside class="sidebar">
         <h2>Balance</h2>
-        <div class="sidebar-value" id="available-balance">▲ 75&nbsp;000 satoshis available</div>
-        <ul>
-          <li><a href="dear-hackers.html" rel="noopener noreferrer">hackers corners</a>
-          </li>
-        </ul>
+        <div class="sidebar-value" id="available-balance">▲ 75&nbsp;000 satoshis available</div>        
         <h2>Other Sites</h2>
         <ul>
           <li><a href="https://bitcointalk.org" target="_blank" rel="noopener noreferrer">bitcointalk.org</a></li>
@@ -57,7 +53,7 @@
           <form id="faucet-form" autocomplete="off">
             <div class="captcha-wrap">
               <div class="captcha-note">
-                We offer free sats only to humans or aliens but not robots.<br>
+                We offer free sats only to humans and aliens but not robots.<br>
                 Please prove you're not an AI robot by completing the reCAPTCHA below.
               </div>
               <!-- Google reCAPTCHA -->
@@ -123,7 +119,8 @@
         <footer>
           Still just a simple faucet on the internet. No guarantees, no promises. Use at your own risk.
           <br />
-          <a href="faucet-status.php" style="font-size:0.85rem;">View faucet status &amp; recent activity &rarr;</a>
+          <a href="faucet-status.php" style="font-size:0.85rem;">View faucet status &amp; recent activity</a>
+        |   <a href="dear-hackers.html" style="font-size:0.8rem;">A friendly message to hackers</a>
         </footer>
       </main>
     </div>
